feat: note CRUD
